[package]
name = "httpcalls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew-agent = "0.1"
gloo-console = "0.2.1"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwasm = "0.2"
httpmessenger = { path="../httpmessenger" }
parking_lot = "0.12.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[target.wasm32-unknown-unknown]
runner = 'wasm-bindgen-test-runner'
