[package]
name = "httpcalls"
version = "0.2.0"
edition = "2021"
description = "Modern HTTP client for Yew applications with automatic state management"
license = "MIT OR Apache-2.0"
keywords = ["yew", "wasm", "http", "client", "frontend"]
categories = ["web-programming", "wasm", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
httpmessenger = { path = "../httpmessenger" }
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwasm = "0.5"
gloo-console = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
thiserror = "1.0"
# Only minimal web-sys features needed for utility functions
web-sys = { version = "0.3", features = [
    "FormData",
    "Window",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
# Additional web-sys features only for examples and tests
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "Url",
    "console",
    "File",
    "FileList",
    "HtmlInputElement",
    "Event",
    "EventTarget",
] }

[features]
default = []
debug = []
